tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Glowstone-NzynzD7HQrmEAf7BFd2A2w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4523657713420173531,
  "prerequisites": [
    2184,
    2210500579099955712
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Glowstone Princess isn't as picky as her peers. There are no breeding requirements besides the species being Gold and Redstone. Hooray!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glowstone",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2184,
    2210500579099955712
  ],
  "rewards": [],
  "tasks": []
}
