tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Heroic-AAAAAAAAAAAAAAAAAAAIww==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2243,
  "prerequisites": [
    1117
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This one takes a little luck. You'll have to find Steadfast bees in a dungeon chest. Their useful effect is causing damage to hostile mobs. Breed them from Steadfast and Valiant.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Heroic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1117
  ],
  "rewards": [],
  "tasks": []
}
