tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Indium-AAAAAAAAAAAAAAAAAAABhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 390,
  "prerequisites": [
    2196,
    391
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This bee multiplies all sources of Indium by 3x.\nThe Indium bee is available in LuV, or in IV with the help of magic.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Indium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2196,
    391
  ],
  "rewards": [],
  "tasks": []
}
