tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Industrious-AAAAAAAAAAAAAAAAAAAIdA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2164,
  "prerequisites": [
    2156,
    2157
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Industrious bees produce pollen clusters, a key ingredient to the Alveary. They're also used for breeding many other bees. Their pollination speed is Fast, better than most bees. Breed them from Diligent and Unweary.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Industrious",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2156,
    2157
  ],
  "rewards": [],
  "tasks": []
}
