tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Iridium-AAAAAAAAAAAAAAAAAAABYQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 353,
  "prerequisites": [
    352,
    2203
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An iridium bee. You can actually get small amounts of pure osmium and iridium from its combs.\n\n[note]With these combs and the uranium ones you can now make climate control units for modules in your industrial apiary![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Iridium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    352,
    2203
  ],
  "rewards": [],
  "tasks": []
}
