tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Iron-AAAAAAAAAAAAAAAAAAAIkQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2193,
  "prerequisites": [
    2192,
    2162
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Iron bees as a resource isn't that big a deal, so much stuff makes iron anyways, but they are a key breeding species. They will need an Iron block. Breed them from Copper and Tin.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Iron",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2192,
    2162
  ],
  "rewards": [],
  "tasks": []
}
